--- a/website.css
+++ b/website.css
@@ -1,22 +1,23 @@
-
-
-
+*, ::after, ::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     background-color:white;
-    font-family: sans-serif
+    font-family: PT Sans;
 }
-body *
-{
-    border:1px solid black; 
-    font-family: sans-serif
-}
+
 header{
     display: flex;
-    flex-direction: flex;
     background-image: url(imgs/HeartofKYWebLogo.jpg);
+    flex-wrap: wrap;
+    height:400px;
     
 }
-.logo{display: none;}
+.logo{
+    display: none;
+}
 
 .title{
     font-size: 39pt;
