--- a/website.css
+++ b/website.css
@@ -5,7 +5,9 @@
 }
 body{
     background-color:white;
-    font-family: PT Sans;
+    font-family: Arial, Helvetica, sans-serif;
+
+    
 }
 
 header{
@@ -20,10 +22,13 @@ header{
 .title{
     display:flex;
     font-family: "Rock Salt";
-    font-size:50px;
-    width: 300px;
+    font-size:20px;
+    margin-left:10px;
     flex-wrap:wrap;
     border: 1px solid black;
+    color: rgba(249, 249, 249, 1);
+    
+    
 }
 
 nav ul {
@@ -40,10 +45,38 @@ nav ul {
     display: none;
 }
 
-.title{
-    font-size: 39pt;
-    font-family: 'Rock Salt';
-    font-weight: 400;
-    color: rgba(249, 249, 249, 1);
+.social:nth-child(1) img{
+    /*background-color: #1877f2;*/
+    /*okay we*/
+    border-radius: 100%;
+    background-image: linear-gradient(#1877f2, #6e8cb5);
 }
+.social:nth-child(2) img{
+    background-color: #fe005c;
+    border-radius: 100%;
+    background-image: linear-gradient(#eb89ad,#fe005c);
+}
+aside{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin: 20px 0px 20px 0px;
+}
+
+p{ 
+    margin: 10px 30px 10px 30px;
+}
+
+h2{
+    margin: 0px 30px 0px 30px;
+}
+
+h3{
+    margin: 0px 30px 0px 30px;
+}
+address{ 
+    margin: 0px 30px 0px 30px;
+}
+
 
