--- a/website.css
+++ b/website.css
@@ -80,17 +80,21 @@ nav a:visited{
     /*okay this is is cool. I like what we did for the gradient*/
     border-radius: 100%;
     background-image: linear-gradient(#1877f2, #6e8cb5);
+    width: 60px;
 }
 .social:nth-child(2) img{
+    /*I think we can add a linear gradient where the patterns of 
+    Instagram flow in*/ 
     background-color: #fe005c;
     border-radius: 100%;
     background-image: linear-gradient(#eb89ad,#fe005c);
+    width: 60px;
 }
 aside{
     display:flex;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 20px;
     margin: 20px 0px 20px 0px;
 }
 
@@ -102,10 +106,25 @@ ul{
     margin: 10px 30px 10px 50px;
 }
 
-.social:not(#home){
-    display:none;
+#childcare aside, #activities aside, #support aside, #preschool aside, #concerns aside{
+    display:none; /* The socials image for every other pages except home is hidden.*/
+}
+#whyChildcare .imgdiv{
+    display:none; /* There was a photo not in the original website which was removed.*/
+}
+#whyChildcare div{
+    order:2;
 }
 
+#choseChildcare, #childcareBenefits{
+    display:grid;
+    grid-template-columns:2;
+    grid-template-rows: 2;
+    border: 1px solid black;
+}
+#choseChildcare .imgdiv{
+    grid-row: 1/3;
+}
 @keyframes color-change {
   from { background-color:transparent;}
   to { background-color: black; }
