--- a/website.css
+++ b/website.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     background-color:white;
 }
@@ -46,6 +47,7 @@ nav{
     justify-content: flex-end;
     animation: color-change .1s;
     animation-timeline: scroll();
+    border: 2px solid white;
 }
 
 nav ul {
@@ -56,13 +58,27 @@ nav ul {
 }
 
 nav a:link{
-    color: solid white;
+    color: solid #ffffff;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 nav a:visited{
-    color: #6e8cb5;
+    color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
+
+nav::before {
+    display: flex;
+    content: "Heart of KY Kids";
+    color: rgb(219, 219, 228);
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    align-self: center;
+    text-align: left;
+}
+
 .logo{
     display: none;
 }
@@ -151,8 +167,3 @@ ul{
   from { background-color:transparent;}
   to { background-color: black; }
 }
-
-
-
-
-
