--- a/website.css
+++ b/website.css
@@ -11,7 +11,7 @@ body{
 header{
     display: flex;
     background-image:
-        linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
+        linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
         url(imgs/HeartofKYWebLogo.jpg);
     background-size: cover;
     background-position: center;
@@ -23,7 +23,6 @@ header{
 
 header .title{
     display:flex;
-    font-family: "Segoe Print";
     text-align: center;
     text-wrap: wrap;
     justify-content: center;
@@ -45,7 +44,7 @@ nav{
     align-items: center;
     flex-grow: auto;
     justify-content: flex-end;
-    animation: color-change .1s;
+    animation: color-change .01s;
     animation-timeline: scroll();
 }
 
@@ -104,7 +103,7 @@ nav::before {
     Instagram flow in*/ 
     background-color: #fe005c;
     border-radius: 100%;
-    background-image: linear-gradient(#eb89ad,#fe005c);
+    background-image: linear-gradient(#ff8800,#fe005c);
     width: 60px;
 }
 aside{
@@ -132,6 +131,8 @@ p{
 
 p a:link{
     color: rgba(0, 114, 153, 1);
+    font-weight: bold;
+    text-decoration: none;
 }
 
 h2, h3{
@@ -208,5 +209,5 @@ ul{
 
 @keyframes color-change {
   from { background-color:transparent;}
-  to { background-color: black; }
+  to { background-color: rgb(0, 0, 0); }
 }
