--- a/website.css
+++ b/website.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asset&family=Cabin+Sketch:wght@400;700&family=Fredericka+the+Great&family=Sintony:wght@400;700&display=swap');
+
+
 *,
 ::after,
 ::before {
@@ -5,6 +10,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 
 body {
   background-color: rgb(238, 232, 240);
@@ -62,19 +68,27 @@ header {
 
 .links li {
   list-style: none;
+   font-family: "Sintony", sans-serif;
 }
 #home main > section {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-a:not(nav a) {
-  color: rgb(0, 114, 153, 1);
+a:not(nav a){
+  color: rgba(0, 114, 153, 1);
 }
 
-#home h2 {
-  font-size: 30px;
-  font-weight: 900;
+#activities a, #support a{
+    color: white;
+    
 }
+
+
+
+h2 {
+    font-size: 40px;
+}
+
 
 p a{
     text-decoration: none;
@@ -83,7 +97,6 @@ p a{
 
 link #home p{
   font-size: 18px;
-  font-style: "PT Sans", sans-serif;
   margin-top: 20px;
   font-weight: lighter;
   text-decoration: none;
@@ -91,19 +104,23 @@ link #home p{
   color: rgb(35, 32, 32);
 }
 
+#home #funding{
+
+}
+
 header .title {
   display: flex;
-  width: 300px;
-  font-family: "Rock Salt", cursive;
-  font-weight: 600;
+  width: 500px;
+  font-family: "Cabin Sketch", sans-serif;
+  font-weight: 700;
   text-align: center;
   text-wrap: wrap;
   justify-content: center;
   align-items: center;
-  font-size: 50px;
+  font-size: 80px;
   margin: auto;
   flex-wrap: wrap;
-  color: rgba(249, 249, 249, 1);
+  color: rgb(249, 249, 249);
   height: fit-content;
   order: 1;
   background: radial-gradient(transparent, rgba(74, 85, 172, 0.925), rgba(93, 35, 128, 0.25));
@@ -172,6 +189,7 @@ nav::before {
   color: rgba(0, 114, 153, 1);
 }
 
+
 .social:nth-child(1) img {
   /*background-color: #1877f2;*/
   /*okay this is is cool. I like what we did for the gradient*/
@@ -205,19 +223,27 @@ address,
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Sintony", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 2px;
 }
 
 h2,
 h3 {
-  font-family: "Raleway", sans-serif;
+    background: linear-gradient(40deg,#0f86b9dc,#aa6ad5);
+    border-radius: 25px;
+  font-family: "Cabin Sketch", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 600;
+  font-weight: 900;
   font-style: normal;
+    text-align: center;
   padding-bottom: 10px;
   padding-top: 10px;
-  color: rgba(0, 114, 153, 1);
+  color: rgb(251, 254, 255);
 }
+
+
 
 ul {
   margin: 10px 15% 10px 15%;
@@ -259,10 +285,6 @@ ul {
   flex-grow: 1;
 }
 
-#childcare h2 {
-  font-size: 35px;
-}
-
 #poviders {
   display: none;
 }
@@ -271,6 +293,10 @@ ul {
 
 #headStartPre {
   display: flex;
+}
+#preschool a{
+    color:white;
+    
 }
 .imgwrapper {
   display: flex;
@@ -315,6 +341,11 @@ ul {
   width: 280px;
 }
 
+#activities p, #support p, #preschool p{
+    font-weight: 600;
+}
+
+
 #activities .imggroup.short {
   display: flex;
   flex-direction: column;
@@ -325,6 +356,7 @@ ul {
 }
 .imggroup.long .links li a {
   color: white;
+   font-family: "Sintony", sans-serif;
 }
 
 #activities .imggroup.long {
@@ -360,10 +392,13 @@ iframe[src="https://www.youtube.com/embed/HVb7yfI0HT4"]
 #dolly a,
 #ready4k a {
   text-decoration: none;
+   font-family: "Sintony", sans-serif;
 }
 
 .note {
   margin: 50px;
+  font-size: 30px;
+  text-align: center;
 }
 @keyframes color-change {
   from {
@@ -449,7 +484,9 @@ display: inline-block;
 padding: 14px 22px;
 font-size: 18px;
 border-radius: 6px;
+ font-family: "Sintony", sans-serif;
 }
+
 
 #activities .imggroup > div {
 padding: 10px 15px;
@@ -459,6 +496,7 @@ padding: 10px 15px;
     display: flex;
     justify-content: center;
 }
+
 
 #support .imgwrapper {
 display: flex;
@@ -501,8 +539,7 @@ margin: 10px 0;
     background: linear-gradient(#3a669fc3, #924cd471);
     border-radius: 50px;
     padding: 20px;
-    margin-left: 3px;
-    margin-right: 3px;
+    margin: 4px;
     font-size: larger;
     color:#ffffff;
 }
